Footer overlap with navigation fix | Navigation menu styling updated | TOC alignment fix | Affiliates buttons start | TOC line breaks removed | Spacing between heading and cta buttons

--- a/resources/css/navigation.css
+++ b/resources/css/navigation.css
@@ -22,8 +22,8 @@
 
 /* Assign active class to currenctly visited page */
 .navigation__menu .active-page a {
-  background-color: var(--BabyBlue);
-  color: var(--MatteBlack);
+  background-color: var(--ButtonActive);
+  color: var(--OffWhite);
   border-radius: 0.375rem;
 }
 
